<resources>
    <string name="app_name">Google Lens Clone</string>
    <string name="save_photo">Save Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="open_camera_activity">Open Camera Activity</string>
    <string name="take_photo_device_camera">Take Photo (Device Camera)</string>
    <string name="start_scanner">Start Scanner</string>
    <string name="open_barcode_activity">Open Barcode Activity</string>
    <string name="open_face_detect_activity">Open Face Detect Activity</string>
    <string name="open_image_label_activity">Open Image Label Activity</string>
    <string name="open_text_recog_activity">Open Text Recog Activity</string>
    <string name="open_camera">Open Camera</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="detect_face">Detect Face</string>
    <string name="label_image">Label Image</string>
    <string name="recognize_text">Recognize text</string>
</resources>