<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgThumb"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo_device_camera"/>

    <Button
        android:id="@+id/btnCameraActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_camera"/>

    <Button
        android:id="@+id/btnBarcodeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_barcode"/>

    <Button
        android:id="@+id/btnFaceDetectActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detect_face"/>

    <Button
        android:id="@+id/btnImageLabelActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_image"/>

    <Button
        android:id="@+id/btnTextRecogActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recognize_text"/>

</LinearLayout>